# bilibili-subtitle

./: BV1ooDyBmE6v_subtitle.json  BV1ooDyBmE6v_subtitle.txt  README.md  bili_summarize.py  download.py  pyproject.toml
agent-skill/: SKILL.md
bilibili_subtitle/: __init__.py  cli.py  downloader.py
