[project]
name = "bilibili-subtitle"
version = "0.1.0"
description = "B站视频 AI 字幕下载工具"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40",
    "requests>=2.28",
]
authors = [
    {name = "tiancaijb"}
]
keywords = ["bilibili", "subtitle", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tiancaijb/bilibili-subtitle"

[project.scripts]
bili-subtitle = "bilibili_subtitle.cli:main"
